--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,10 @@ body {
       align-items: center;
       flex-direction: column;
       cursor: pointer;
-      transition: all 0.3 ease 0; }
+      transition: all 0.3 ease 0;
+      font-size: 19.2px;
+      font-weight: 800;
+      color: white; }
       .content__cards--card:hover {
         box-shadow: 0 0 10px #0099b8 inset, 0 0 30px #0099b8; }
 
@@ -163,7 +166,7 @@ body {
     transform: translateY(-3.6px); }
 
 .diagramPreview {
-  display: none;
+  visibility: hidden;
   position: fixed;
   width: 100%;
   height: 9600px;
@@ -262,6 +265,7 @@ body {
                     -moz-box-shadow: 10px 10px 99px 6px #b9e769;
                     box-shadow: 10px 10px 99px 6px #b9e769; }
         .diagramPreview__Container--topContainer--diagrams .middleContainer {
+          background-color: rgba(0, 0, 0, 0.2);
           grid-column: 4 / span 4; }
         .diagramPreview__Container--topContainer--diagrams .rightContainer {
           box-shadow: 0 0 10px #0099b8 inset, 0 0 30px #0099b8;
@@ -362,30 +366,20 @@ body {
       .diagramPreview__Container--bottomContainer > div:nth-child(1) {
         display: flex;
         justify-content: flex-end;
-        padding-right: 36px;
         width: 50%;
         height: 100%; }
         .diagramPreview__Container--bottomContainer > div:nth-child(1) .container__pieDiagram {
-          padding-right: 96px; }
-          .diagramPreview__Container--bottomContainer > div:nth-child(1) .container__pieDiagram__title {
-            margin-top: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 12px;
-            color: white; }
-          .diagramPreview__Container--bottomContainer > div:nth-child(1) .container__pieDiagram__pie {
-            width: 156px;
-            height: 156px;
-            background-color: #b9e769;
-            border-radius: 50%; }
+          width: 100%;
+          margin-left: 36px;
+          margin-top: 12px; }
         .diagramPreview__Container--bottomContainer > div:nth-child(1) .container__totalNumber {
           width: 30%;
           height: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column; }
+          flex-direction: column;
+          margin-right: 12px; }
           .diagramPreview__Container--bottomContainer > div:nth-child(1) .container__totalNumber h {
             font-size: 24px;
             color: white; }
@@ -394,29 +388,17 @@ body {
             color: white; }
       .diagramPreview__Container--bottomContainer > div:nth-child(2) {
         display: flex;
-        padding-left: 36px;
+        justify-content: flex-end;
         width: 50%;
         height: 100%; }
-        .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__pieDiagram {
-          padding-left: 96px; }
-          .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__pieDiagram__title {
-            margin-top: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 12px;
-            color: white; }
-          .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__pieDiagram__pie {
-            width: 156px;
-            height: 156px;
-            background-color: #b9e769;
-            border-radius: 50%; }
         .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__totalNumber {
           width: 30%;
           height: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
+          margin-left: 12px;
+          margin-right: 36px;
           flex-direction: column; }
           .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__totalNumber h {
             font-size: 24px;
@@ -424,5 +406,9 @@ body {
           .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__totalNumber p {
             font-size: 48px;
             color: white; }
+        .diagramPreview__Container--bottomContainer > div:nth-child(2) .container__pieDiagram {
+          width: 100%;
+          margin-left: 36px;
+          margin-top: 12px; }
 
 /*# sourceMappingURL=style.css.map */
